Bug 140866 - Cell comments disappear when form control copied on the sheet (steps: comment 10)
Summary: Cell comments disappear when form control copied on the sheet (steps: commen...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium major
Assignee: Balázs Varga
URL:
Whiteboard: target:26.2.0 target:25.8.2.2 target:...
Keywords: dataLoss
Depends on:
Blocks: Calc-Comments
  Show dependency treegraph
 
Reported: 2021-03-07 21:35 UTC by Juan Aspeitiagoitia
Modified: 2025-10-13 17:14 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODS from comment 4 (2.29 MB, application/vnd.oasis.opendocument.spreadsheet)
2021-07-05 01:05 UTC, Aron Budea
Details
File showing all comments present (11.85 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-12-15 11:39 UTC, PaulSh
Details
Save file after control copy/paste with missing comments (12.65 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-12-15 11:40 UTC, PaulSh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juan Aspeitiagoitia 2021-03-07 21:35:27 UTC
Description:
When opening a file, comments entered in some cells have disappeared (even a file saved with the previous version and that had all the comments entered when opening it, these comments are not there)

Actual Results:

I do not understand

Expected Results:

I do not understand


Reproducible: Sometimes


User Profile Reset: No



Additional Info:

I do not understand
Comment 1 Roman Kuznetsov 2021-03-08 19:28:43 UTC
Juan, please give us more detail steps what did you do. 

Like:

1. Open calc
2. Create a comment in A1 cell
3. Save file as ODS and close it
4. Reopen the file => comment disappeared
Comment 2 Juan Aspeitiagoitia 2021-03-08 20:45:25 UTC
Is like you indicate:

1. Open with calc a file create in an old version (7.0.4.2) that have comments in some cells
2. Do some changes and ad new comments
3. Save file as ODS and close it
4. Reopen the file => some comment disappeared
Comment 3 Roman Kuznetsov 2021-03-08 21:41:27 UTC
No repro from scratch in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 72841008bf422dfd8553240b3a78f0474d03523c
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

if you have the file created in previous LO version, then please attach it here
Comment 4 Juan Aspeitiagoitia 2021-03-09 08:35:00 UTC
This is the file where disapperar comments en some cells:

https://drive.google.com/file/d/1ukEYv6orQQcawPBC_uwJCW8IVyjm_DIl/view?usp=sharing

and three images in which you can see the cells with comments and most of them disappear when opening the file with version 7.1.1:

https://drive.google.com/file/d/1cIeqA0GGGn2eZQA_4NIy6pROPFaR2xpq/view?usp=sharing

https://drive.google.com/file/d/11bxJ4tnviCM9BTnuDJCRbBEt2ZT89NNt/view?usp=sharing

https://drive.google.com/file/d/12Ozv4X4MTlo0IZaCl_ijvtnzqCs9fO88/view?usp=sharing
Comment 5 himajin100000 2021-03-10 04:56:05 UTC
not reproducible.
As you can see, there is a small red square(comment indicator) in the cell, and when you hover over the small red square, you can see the comment content.
Comment 6 Juan Aspeitiagoitia 2021-03-10 07:53:07 UTC
Yeah I know. My neuron is up to that!
Comment 7 QA Administrators 2021-03-11 04:50:12 UTC Comment hidden (obsolete)
Comment 8 Xisco Faulí 2021-03-18 17:37:09 UTC Comment hidden (obsolete)
Comment 9 Aron Budea 2021-07-05 01:05:38 UTC
Created attachment 173354 [details]
Sample ODS from comment 4

Let's attach the sample from comment 4 here, to preserve it for the future.
Comment 10 PaulSh 2021-12-15 11:38:02 UTC
After literally YEARS of trying on and off to get a repro on this issue, I finally have one. OK, I guess I can't guarantee that my method of making comments disappear is the same as the OP's, but at least it's 100% reproducible.

1) Create an empty spreadsheet and add a comment to cell A1
2) Copy this cell through O1 so now there are 15 comments visible (I don't think the exact number is significant, it's just that I see columns A through O when I create a new sheet)
3) Copy the top row through row 40 so now there are 600 comments visible (again I don't think the exact number is significant, but doing this makes it very easy to see if a comment has gone missing)
4) In design mode, create a form control on the sheet in the uncommented region - I've tested with a button and a label
5) Save and close
6) Open the sheet - it should look fine
7) In design mode, select the control, copy it (ctrl+c), select a cell somewhere else in the uncommented region and paste (ctrl+v)
8) Save and close
9) Open the sheet - some comments will be missing!

One other thing to note is that even when comments have gone missing from the saved file, in the open sheet itself the comments are still present in both the sheet annotations object AND the individual cell annotation fields.

I will attach copies of the test sheet before and after the control was copied and pasted. Just for the sake of it, here's my Calc info, but really the issue has been there for a long, long time:

Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL
Comment 11 PaulSh 2021-12-15 11:39:28 UTC
Created attachment 176945 [details]
File showing all comments present
Comment 12 PaulSh 2021-12-15 11:40:04 UTC
Created attachment 176946 [details]
Save file after control copy/paste with missing comments
Comment 13 PaulSh 2022-01-09 14:24:37 UTC
After some more testing, it seems that my above methodology can also trash the comments if a drawing object (e.g. a text box) is copy/pasted.
Comment 14 Timur 2022-01-17 13:53:13 UTC
Reproduced in LO 4.3 and 7.4+ with (great) steps from comment 10. 
Comments disappear randomly. Further saving deletes more comments. 
With 4.2 it was worse, all text and comments would disappear.
Comment 15 Juan Aspeitiagoitia 2022-01-17 16:53:14 UTC
perdón por no poder aportar al respecto del bug que reporté.. pero os consigo medio entender y seguir vuestras averiguaciones gracias al traductor de Google
Comment 16 QA Administrators 2024-01-26 03:14:25 UTC Comment hidden (obsolete)
Comment 17 Oliver Specht (CIB) 2024-11-28 10:25:56 UTC
Pasting shapes changes the cell address of comments and all objects anchored at a cell.

This has started with 
commit 545737df40880875304bffc3f49800d1d2e99723
Author: Kohei Yoshida <kohei.yoshida@gmail.com>
Date:   Fri Jan 25 12:57:14 2013 -0500

ScDrawLayer::SetCellAnchoredFromPosition(...) 
ScViewFunc::PasteDraw(...) Line 246
Comment 18 Gabor Kelemen (Collabora) 2025-04-22 14:56:23 UTC Comment hidden (obsolete)
Comment 19 Commit Notification 2025-09-29 09:12:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d932a383766b6133ffe9ebf077f95cc328807b1b

tdf#140866 - sc fix cell comments disappear after ods saving

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2025-09-29 11:27:31 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/161311deff7d1efaa7cca1f06b74df4d1b5f7efb

tdf#140866 - sc fix cell comments disappear after ods saving

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2025-09-29 14:37:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/15e199fd34280dcf8d2371f70c68e92a20d33c3c

tdf#140866 - sc fix cell comments disappear after ods saving

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2025-09-29 14:56:28 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/7b33705f535eaff0e9c423877dbaff717b391063

tdf#140866 - sc fix cell comments disappear after ods saving

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Gabor Kelemen (Collabora) 2025-10-13 17:14:57 UTC
Verified in 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ff8c8bd4e3ebf8f84f53448ead3c838332ea9
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

Comments are no longer lost when a form control is copy-pasted then the file is saved.