tdf#140866 - sc fix cell comments disappear after ods saving

They disappeared because before saving the file to ods
some other drawing objects very copied and pasted on the sheet
which caused a recalculation of all the cell anchored drawing object's
anchor position with SetCellAnchoredFromPosition since commit:
545737df40880875304bffc3f49800d1d2e99723
No need to recalculate the cell anchor position of Caption objects
since their anchor position is handled differently.

cherry-pick from: d932a383766b6133ffe9ebf077f95cc328807b1b

Change-Id: I83d54075974d9a7c2676af23f285e621afe0d523
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191548
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191605
Tested-by: allotropia jenkins <jenkins@allotropia.de>